<resources>
    <string name="app_name">E Commerce App</string>
    <string name="realm_app_id">eaa-tkpm-alycs</string>
    <string name="PARTITION">123</string>
    <string name="subtotal_price">subtotal price:</string>
    <string name="zero_number">0</string>
    <string name="discount">discount: </string>
    <string name="total_price">TOTAL: </string>

    <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="check_out">CHECK OUT</string>
    <string name="cart_items">CART ITEMS</string>
    <string name="change_applied">Changes are applied</string>
    <string name="quantity_error">invalid quantity</string>
    <string name="item_deleted">item is deleted</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="quantity">QUANTITY: </string>
    <string name="go_to_check_out">Go to check out</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="text_holder">TEXT HOLDER...</string>
    <string name="quantity_holder">quantity...</string>
    <string name="login_string">LOGIN</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email here</string>
    <string name="password">Password</string>
    <string name="password_hint">From 6 to 128 char</string>
    <string name="forget_pass">Forget your password ?</string>
    <string name="create_new_account">First time here ?</string>
    <string name="sign_up">Sign up now</string>
    <string name="signup_string">SIGN UP</string>
    <string name="repass">Enter password again</string>
    <string name="sign_in">Have an account ?</string>
    <string name="login">Login now</string>
    <string name="empty_cart_error">Your cart doesn\'t have any items</string>
    <string name="reset_pass">RESET ACCOUNT</string>
    <string name="new_password">New Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_information_title">Information</string>
    <string name="user_order_title">Orders</string>
    <string name="user_security_title">Security</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="date">Date</string>
    <string name="state">State</string>
    <string name="id">ID</string>
    <string name="change_password">Change password</string>
    <string name="price">Price</string>
    <string name="products">Products</string>
    <string name="loading_data">Loading data...</string>
    <string name="wrong_date_format">Unreconized date format</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="saving">Saving...</string>
    <string name="old_password">Old password</string>
    <string name="renew_password">Enter new password again</string>
    <string name="empty_old_pass">Old password can\'t be empty</string>
    <string name="empty_new_pass">New password can\'t be empty</string>
    <string name="renew_pass_wrong">Re-enter new password is not matched with new password</string>
    <string name="change_password_success">Password is changed</string>
    <string name="change_password_fail">ERROR: Your old password may be not matched</string>
    <string name="cant_find_account">ERROR: Can\'t find your account in database. Please try again next time or contach administrator</string>
    <string name="passwordNotMatch">Password and Re password not match</string>
    <string name="admin_account_title">Accounts</string>
    <string name="account_product_title">Products</string>
    <string name="account_order_title">Orders</string>
    <string name="loading_error">Some errors occured. Please check your internet connection</string>
    <string name="unconfirmed">UNCONFIRMED</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="delivering">DELIVERING</string>
    <string name="delivered">DELIVERED</string>
    <string name="delete_order_fail">ERROR: can\'t delete this order</string>
    <string name="delete_order_success">Order is deleted</string>
    <string name="change_order_state_fail">ERROR: can\'t change order state</string>
    <string name="change_order_state_success">Order state is changed</string>
    <string name="login_needed">You need to login first</string>
    <string name="add_to_cart_fail">ERROR: can\'t add product to cart</string>
    <string name="add_to_cart_success">Product is added</string>
    <string name="description">Description</string>
    <string name="image_url">Image URL</string>
    <string name="create_product">Create product</string>
</resources>