<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.UserPageFragments.UserInformationFragment">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/receiver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/receiver_name"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/phone_number"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/address"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/price"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/state"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/date"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>