<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.AdminPageFragments.AdminOrderDetailFragment">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:src="@drawable/back_icon"/>
            <TextView
                android:text="@string/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/orderId"
                android:text="@string/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingHorizontal="10sp"
                android:textStyle=""
                />
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:text="@string/receiver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/receiver_name"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/phone_number"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/address"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/price"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <RadioGroup
            android:id="@+id/orderState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/orderState_unconfirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/unconfirmed" />
            <RadioButton
                android:id="@+id/orderState_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/confirmed" />
            <RadioButton
                android:id="@+id/orderState_delivering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/delivering" />
            <RadioButton
                android:id="@+id/orderState_delivered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/delivered" />

        </RadioGroup>
        <TextView
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/date"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/delete_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/round_button"
                    android:src="@drawable/delete_icon_red"/>
                <ImageButton
                    android:id="@+id/save_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/round_button"
                    android:src="@drawable/check_icon"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>