<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AdminPageFragments.AdminAccountDetailFragment">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:src="@drawable/back_icon"/>
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/userName"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/name"
            android:inputType="text"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/dob"
            android:inputType="date"
            android:hint="@string/date_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/email"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/phoneNumber"
            android:inputType="phone"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
          />
        <TextView
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/address"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            android:singleLine="false"
            android:maxLines="10"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"

            />

    </LinearLayout>

</ScrollView>