<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.UserPageFragments.UserInformationFragment">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/userName"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            android:background="@drawable/edittext_rounded_border"/>
        <TextView
            android:text="@string/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/dob"
            android:inputType="date"
            android:hint="@string/date_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            android:background="@drawable/edittext_rounded_border"/>
        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/email"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            />
        <TextView
            android:text="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/phoneNumber"
            android:inputType="phone"
            android:hint="@string/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            android:background="@drawable/edittext_rounded_border"/>
        <TextView
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <EditText
            android:id="@+id/address"
            android:hint="@string/text_holder"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            android:lines="1"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:background="@drawable/edittext_rounded_border"/>

            <RelativeLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/save_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/round_button"
                    android:src="@drawable/check_icon"/>
            </RelativeLayout>
    </LinearLayout>

</ScrollView>