<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ForgetPassActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="30dp">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_pass"
            android:textSize="50dp"
            android:textAlignment="center"
            android:layout_marginVertical="30dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/cardview_dark_background">
        </TextView>
    </LinearLayout>

    //Email
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/editText_signup_email"
            android:hint="@string/email_hint"
            android:background="@color/grey">
        </EditText>
    </LinearLayout>

    //Password
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="20dp"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/editText_signup_password"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:background="@color/grey">
        </EditText>
    </LinearLayout>

    //Repass
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repass"
            android:textSize="20dp"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:id="@+id/editText_signup_RePassword"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:background="@color/grey">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="90dp">
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/reset_pass"
            android:padding="5dp"
            android:id="@+id/btn_reset">

        </Button>
    </LinearLayout>
</LinearLayout>